--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,13 @@
+@keyframes emoji-anim {
+    0% { font-size: 16px }
+    50% { font-size: 42px }
+    100% {font-size: 16px}
+}
+
 .App {
     text-align: center;
-
+    font-family: 'Comfortaa', 'Roboto', sans-serif;
+    color:#fff;
     display: flex;
     justify-content: center;
     height: 100vh;
@@ -11,7 +18,9 @@
 .background {
     background-image: url('/memster.gif');
     background-size: 100%;
+    background-color: rgba(0,0,0,0.8);
     background-repeat: repeat-y;
+    background-blend-mode: multiply;
     background-attachment: fixed;
 
     height: 100vh;
@@ -23,16 +32,28 @@
     bottom: 0;
     right: 0;
     left: 0;
-
     z-index: -1;
-    opacity: 0.2;
 
 }
 
 .App-title {
-    font-size: 2.5em;
+    font-weight: 200;
+    font-size: 4em;
 }
 
 .App-intro {
-    font-size: large;
+    font-family: 'Roboto', sans-serif;
+    font-size: 2.2em;
+    font-weight: 200;
 }
+.App-intro .emoji-animation{
+    animation: emoji-anim 3s infinite ease-in-out;
+}
+.App-intro a{
+    color: #08c9ff;
+    cursor: pointer;
+    text-decoration: none;
+    font-family: 'Comfortaa', 'Roboto', sans-serif;
+}
+
+
