--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Comfortaa:200,300,400|Roboto:200,300,400&subset=cyrillic');
 body {
   margin: 0;
   padding: 0;
