--- a/src/containers/AppWrapper/AppWrapper.styles.css
+++ b/src/containers/AppWrapper/AppWrapper.styles.css
@@ -9,15 +9,16 @@
 }
 
 
-.background {
-    background-image: url('/memster.gif');
+.background-video div:nth-child(2) {
+    background: red;
+    background-image: url('/memster.jpg');
     background-size: 100%;
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(0, 0, 0, 0.8);
     background-repeat: repeat-y;
     background-blend-mode: multiply;
     background-attachment: fixed;
 
-    height: 100vh;
+    /* height: 100vh;
     padding: 0;
     margin: 0;
 
@@ -25,6 +26,6 @@
     top: 0;
     bottom: 0;
     right: 0;
-    left: 0;
+    left: 0; */
     z-index: -1;
 }
