--- a/src/containers/AppWrapper/AppWrapper.styles.scss
+++ b/src/containers/AppWrapper/AppWrapper.styles.scss
@@ -9,16 +9,17 @@
 }
 
 
-.background-video div:nth-child(2) {
-    background: red;
-    background-image: url('/memster.jpg');
-    background-size: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    background-repeat: repeat-y;
-    background-blend-mode: multiply;
-    background-attachment: fixed;
+.background-video>div {
+    &:nth-child(2) {
+        background: red;
+        background-image: url('/memster.jpg');
+        background-size: 100%;
+        background-color: rgba(0, 0, 0, 0.8);
+        background-repeat: repeat-y;
+        background-blend-mode: multiply;
+        background-attachment: fixed;
 
-    /* height: 100vh;
+        /* height: 100vh;
     padding: 0;
     margin: 0;
 
@@ -27,5 +28,6 @@
     bottom: 0;
     right: 0;
     left: 0; */
-    z-index: -1;
+        z-index: -1;
+    }
 }
